--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>About Me</h2>
 
         <div class="about-container">
-            <img src="images/Pic.jpg" alt="My Photo">
+            <img src="images/pic.jpg" alt="My Photo">
             
             <p>Hello, I am Bijay Pokhrel, a beginner web developer learning fullstack and game development at Herald College Kathmandu.</p>
         </div>
@@ -41,21 +41,21 @@
 
         <!-- PROJECT 1 -->
         <div class="project-item">
-            <img src="images/MyProject.png" alt="Project 1">
+            <img src="images/myproject.png" alt="Project 1">
             <h4>Project 1 Personal Portfolio Website</h4>
             <p>This is my first project, where I created a basic portfolio webpage using only HTML and CSS.</p>
         </div>
 
         <!-- PROJECT 2 -->
         <div class="project-item">
-            <img src="images/MyProject2.png" alt="Project 2">
+            <img src="images/myproject2.png" alt="Project 2">
             <h4>Project 2 Car Simulation Game</h4>
             <p>This project is a Unity-based game where I developed a car simulation with controls and game logic.</p>
         </div>
 
         <!-- PROJECT 3 -->
         <div class="project-item">
-            <img src="images/MyProject3.png" alt="Project 3">
+            <img src="images/myproject3.png" alt="Project 3">
             <h4>Project 3 City Environment in Unity</h4>
             <p>In this project, I designed a small interactive city layout in Unity to practice scene building and design.</p>
         </div>
